# website

./: .eleventy.js  .eslintrc.js  .gitignore  .sass-lint.yml  .stylelintrc.json  CNAME  Makefile  README.md  example.json  fictional-works.html  gulpfile.js  gulpfile.mjs  index.html  package-lock.json  package.json  resources.html  self-attention.njk  technical-notes.html
.circleci/: config.yml
data/: abbreviations.json  inner-universe.json  inner-universe.pug  phonetic-alphabets.json
favicon/: favicon.ai
fictional-works/: index.html  lilith-and-naama.html  name-origin.html
javascripts/: main.js
latex/: .gitignore  abs.tex  arab.tex  complex-poster.tex  filter.lua  final.tex  hakyll.md  insertion-sort-for-to.tex  insertion-sort-no-end.tex  insertion-sort.tex  latexmkrc  latexmkrc.pl  nn.tex  normal-distribution.tex  process.sh  rtl.tex  simple-poster.tex  sin0.5x.tex  sinx.tex  sqrt.tex  stone-weierstrass-lemma-connected-x.tex  stone-weierstrass-lemma-connected.tex  stone-weierstrass-lemma.tex  vocabulary.tex  words.md  words.tex
nunjucks/: fictional-works.njk  index.html  index.njk  resources.html  resources.njk  scripts.html  technical-notes.njk
pages/: index.pug  resources.pug
posts/: adam-lemma10-3.html  adam-lemma10.3.html  arabluatex.html  backpropagation.html  cabocha-scala.html  cauchy.html  cross-entropy.html  elasticsearch-scala.html  frechet.html  hakyll-whitespace.html  https.html  inner-universe.html  nn-init.html  p-system-and-d-system.html  pca.html  pi-system-and-lambda-system.html  po.html  (+12 more)
python/: main.py  pe.py  pyproject.toml
(+120 files in other folders)
