[tool.poetry]
name = "heatmap"
version = "0.1.0"
description = ""
authors = ["Miyazawa Akira <pecorarista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
